# gefieder

./: .env  .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  Readme  build.sh  buildtime.env  compose.yaml  deploy.sh  dev.sh  install.sh  pyproject.toml  run-dev.sh  run-tests.sh  runtime.env  setup_01.sh  setup_02.sql  start.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  publish.yml
crudman/: Dockerfile  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
deploy/: _common.sh  backup.sh  deploy.sh  rollback.sh  smoke-test.sh  update.sh
grafana/: Dockerfile  custom.ini  render.sh
postgresql/: Dockerfile  Readme.md  gf_0002_install_extensions.sql  gf_0003_create_functions.sql
proxy/: Dockerfile  entrypoint.sh  http.conf  http.conf.template  https.conf  https.conf.template
quadlets/: APP_NAME-backup.volume  APP_NAME-grafana.volume  APP_NAME-postgresql.volume  APP_NAME.pod  backup.container  backup.timer  crudman.container  crudman_data.volume  grafana.container  grafana_data.volume  main.pod  postgresql.container  postgresql_data.volume  proxy.container  proxy_data.volume  sftp.container  sftp_data.volume  sqlmesh.container  sqlmesh_data.volume  uploads_data.volume
serverstats/: collect.sh  server-stats.service  server-stats.timer
sqlmesh/: Dockerfile  config.yaml  entrypoint.sh  external_models.yaml  pyproject.toml
sqlmesh/audits/: assert_known_tenant.sql
sqlmesh/models/bronze/: README.md
sqlmesh/models/bronze/project_a/: issues_raw.sql
sqlmesh/models/bronze/project_b/: issues_raw.sql
sqlmesh/models/bronze/project_c/: issues_raw.py
sqlmesh/models/gold/: issue_metrics.sql
sqlmesh/models/silver/: README.md  issues.sql
sqlmesh/models/silver/project_a/: bronze_issues.sql  issues.sql
sqlmesh/models/silver/project_b/: bronze_issues.sql  issues.sql
sqlmesh/seeds/: project_a_issues.csv  project_b_issues.csv  project_c_issues.csv
tests/: conftest.py  pyproject.toml  test_access_control.py  test_analytics.py  test_database.py  test_dropzones_sftp.py  test_grafana.py  test_http.py  test_logs.py  test_resilience.py  test_secrets.py  test_server_stats.py  test_startup.py  test_tenants.py
(+53 files in other folders)
