[project]
name = "gefieder-sqlmesh"
version = "0.1.0"
description = "The SQLMesh analytics engine for Gefieder."
requires-python = ">=3.13"
# The postgres extra of sqlmesh is intentionally not used: it depends on psycopg2,
# which must be compiled against libpq. psycopg2-binary provides the same module as
# a prebuilt wheel, so no compiler or libpq headers are needed in the image.
dependencies = ["sqlmesh[lsp,github,web]", "psycopg2-binary"]
