[project]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for the analytics platform."
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "httpx",
    "paramiko",
    "psycopg2-binary",
]

[tool.pytest.ini_options]
# Markers are declared so that "pytest --strict-markers" does not complain.
markers = [
    "production: assertions that only hold in the production profile (HTTPS).",
]
